--- a/.github/workflows/Deploy-frontend-application.yml
+++ b/.github/workflows/Deploy-frontend-application.yml
@@ -40,7 +40,6 @@ jobs:
           host: ${{ secrets.HOST_SERVER }}
           username: ${{ secrets.HOST_USER_NAME }}
           key: ${{ secrets.HOST_SSH_PRIVATE_KEY }}
-          port: 22
           source: "docker-compose.yml"
           target: "/home/ubuntu/frontend"
 
@@ -54,9 +53,9 @@ jobs:
           script: |
             cd /home/ubuntu/frontend
             echo ${{ secrets.DOCKER_HUB_TOKEN }} | docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
-            docker compose down
-            docker compose pull
-            docker compose up -d
+            docker-compose down
+            docker-compose pull
+            docker-compose up -d
             rm -rf /home/ubuntu/frontend
 
 # dasdasdas
