create yml file for this branch

--- a/.github/workflows/deploy-new-branches.yml
+++ b/.github/workflows/deploy-new-branches.yml
@@ -3,7 +3,7 @@ name: Deploy frontend application
 'on':
   push:
     branches:
-      - main
+      - update-frontend
 
 jobs:
   docker:
@@ -40,7 +40,7 @@ jobs:
           host: ${{ secrets.HOST_SERVER }}
           username: ${{ secrets.HOST_USER_NAME }}
           key: ${{ secrets.HOST_SSH_PRIVATE_KEY }}
-          source: "docker-compose.yml"
+          source: "docker-compose-new.yml"
           target: "/home/ubuntu/frontend"
 
       - name: Deploy using Docker Compose
