--- a/docker-compose-new.yml
+++ b/docker-compose-new.yml
@@ -1,6 +1,6 @@
 services:
   frontend:
-    image: timetitipon/234-deploylab-frontend:2.0
+    image: timetitipon/234-deploylab-frontend-new:latest
     pull_policy: always
     ports:
       - "9999:80"
