--- a/.github/workflows/Deploy-frontend-application.yml
+++ b/.github/workflows/Deploy-frontend-application.yml
@@ -56,4 +56,5 @@ jobs:
             docker compose down
             docker compose pull
             docker compose up -d
-            rm -rf /home/ubuntu/frontend
+            rm -rf /home/ubuntu/frontend 
+# dasdas
