--- a/docker-compose-new.yml
+++ b/docker-compose-new.yml
@@ -1,5 +1,5 @@
 services:
-  frontend:
+  frontend-new:
     image: timetitipon/234-deploylab-frontend-new:latest
     pull_policy: always
     ports:
